--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Sebastian Brarda
 description: sb5518 [at] nyu [dot] edu
 show_downloads: false
 google_analytics:
-theme: 
+theme:jekyll-theme-minimal
