--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ title: Sebastian Brarda
 description: sb5518 [at] nyu [dot] edu
 show_downloads: false
 google_analytics:
-theme:jekyll-theme-minimal
+theme: jekyll-theme-minimal
+jekyll-theme-minimal
